[gd_scene load_steps=2 format=3 uid="uid://c1rsrsvwmbh6l"]

[ext_resource type="Script" path="res://scripts/ui/main_menu_interface.gd" id="1_acy1w"]

[node name="no deberia ser control" type="Container"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_acy1w")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2

[node name="Quick Start" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 18.0
offset_top = 112.0
offset_right = 113.0
offset_bottom = 143.0
text = "Quick Start"

[node name="Host" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 1051.0
offset_top = 589.0
offset_right = 1095.0
offset_bottom = 620.0
text = "Host"

[node name="join" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 19.0
offset_top = 194.0
offset_right = 57.0
offset_bottom = 225.0
text = "Join"

[node name="LineEdit" type="LineEdit" parent="TextureRect"]
layout_mode = 0
offset_left = 19.0
offset_top = 54.0
offset_right = 125.0
offset_bottom = 85.0
placeholder_text = "Player name"

[node name="MenuButton" type="MenuButton" parent="."]
layout_mode = 2

[connection signal="pressed" from="TextureRect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="TextureRect/join" to="." method="_on_join_pressed"]
[connection signal="text_submitted" from="TextureRect/LineEdit" to="." method="_on_line_edit_text_submitted"]
